Fix width on small screens

--- a/res/static/style/layout.css
+++ b/res/static/style/layout.css
@@ -127,6 +127,7 @@ body{
 	}
 	.page_body {
 		left: 0;
+		width: 100%;
 	}
 }
 
